# microservice

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  microservice.props  microservice.sln
demo/: CMakeLists.txt
demo/hello_client/: CMakeLists.txt  hello_client.vcxproj  hello_client.vcxproj.filters
demo/hello_client/include/: hello_proto.h
demo/hello_client/src/: .main.cpp.swp  main.cpp
demo/hello_server/: CMakeLists.txt  hello_server.vcxproj  hello_server.vcxproj.filters
demo/hello_server/include/: hello_proto_gson.h
demo/hello_server/src/: config.cpp  hello_proto_gson.cpp  main.cpp
doc/: readme.txt
gateserver/: gateserver.vcxproj  gateserver.vcxproj.filters
gateserver/include/: config.h  gate_servlet.h  gateserver.h
gateserver/src/: config.cpp  gate_servlet.cpp  gateserver.cpp  main.cpp
http_rpc/: CMakeLists.txt  README.md  http_rpc.sln  http_rpc.vcxproj  http_rpc.vcxproj.filters
http_rpc/include/: access_list.h  http_rpc.h  http_rpc_client.h  http_rpc_config.h  http_rpc_server.h  http_rpc_servlet.h  json_service_handle.hpp  json_service_handles.hpp  nameserver_proto.h  nameserver_proto_gson.h  protobuf_service_handle.hpp  protobuf_service_handles.hpp  service_base.h  service_handle.hpp  service_handles.hpp  service_register.h
http_rpc/src/: access_list.cpp  http_rpc.cpp  http_rpc_client.cpp  http_rpc_config.cpp  http_rpc_server.cpp  http_rpc_servlet.cpp  msg_handlers.cpp  nameserver_proto_gson.cpp  service_base.cpp  service_register.cpp
nameserver/: CMakeLists.txt  nameserver.vcxproj  nameserver.vcxproj.filters
nameserver/include/: nameserver.h  service_mgr.h
nameserver/src/: config.cpp  main.cpp  service_mgr.cpp
publisher/: publisher.vcxproj  publisher.vcxproj.filters
publisher/src/: main.cpp  master_service.cpp  master_service.h  service_serlvet.cpp  service_serlvet.h
